python/pyoracc/test/atf/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RSQUARE
    RANGE
    LSQUARE
    SCORELABEL

Grammar

Rule 0     S' -> document
Rule 1     document -> text
Rule 2     document -> object
Rule 3     document -> composite
Rule 4     text_statement -> AMPERSAND ID EQUALS ID newline
Rule 5     project_statement -> PROJECT ID newline
Rule 6     project -> project_statement
Rule 7     text -> text project
Rule 8     text -> text_statement
Rule 9     skipped_protocol -> ATF USE UNICODE newline
Rule 10    skipped_protocol -> ATF USE MATH newline
Rule 11    skipped_protocol -> ATF USE LEGACY newline
Rule 12    skipped_protocol -> ATF USE MYLINES newline
Rule 13    skipped_protocol -> ATF USE LEXICAL newline
Rule 14    skipped_protocol -> key_statement
Rule 15    skipped_protocol -> BIB ID newline
Rule 16    skipped_protocol -> lemmatizer_statement
Rule 17    key_statement -> key newline
Rule 18    key_statement -> key EQUALS newline
Rule 19    key -> KEY ID
Rule 20    key -> key EQUALS ID
Rule 21    lemmatizer -> LEMMATIZER
Rule 22    lemmatizer -> lemmatizer ID
Rule 23    lemmatizer_statement -> lemmatizer newline
Rule 24    link -> LINK DEF ID EQUALS ID EQUALS ID newline
Rule 25    link -> LINK PARALLEL ID EQUALS ID newline
Rule 26    link -> INCLUDE ID EQUALS ID newline
Rule 27    language_protocol -> ATF LANG ID newline
Rule 28    text -> text skipped_protocol
Rule 29    text -> text link
Rule 30    text -> text language_protocol
Rule 31    text -> text object
Rule 32    text -> text surface
Rule 33    text -> text translation
Rule 34    text -> text surface_element
Rule 35    text -> text COMPOSITE newline
Rule 36    composite -> text text
Rule 37    composite -> composite text
Rule 38    object_statement -> object_specifier newline
Rule 39    flag -> HASH
Rule 40    flag -> EXCLAIM
Rule 41    flag -> QUERY
Rule 42    flag -> STAR
Rule 43    object_specifier -> object_specifier flag
Rule 44    object_specifier -> TABLET
Rule 45    object_specifier -> ENVELOPE
Rule 46    object_specifier -> PRISM
Rule 47    object_specifier -> BULLA
Rule 48    object_specifier -> FRAGMENT ID
Rule 49    object_specifier -> OBJECT ID
Rule 50    object_specifier -> TABLET REFERENCE
Rule 51    object -> object_statement
Rule 52    object -> object surface
Rule 53    object -> object translation
Rule 54    object -> object surface_element
Rule 55    surface_statement -> surface_specifier newline
Rule 56    surface_specifier -> surface_specifier flag
Rule 57    surface_specifier -> OBVERSE
Rule 58    surface_specifier -> REVERSE
Rule 59    surface_specifier -> LEFT
Rule 60    surface_specifier -> RIGHT
Rule 61    surface_specifier -> TOP
Rule 62    surface_specifier -> BOTTOM
Rule 63    surface_specifier -> FACE ID
Rule 64    surface_specifier -> SURFACE ID
Rule 65    surface_specifier -> COLUMN ID
Rule 66    surface_specifier -> SEAL ID
Rule 67    surface_specifier -> HEADING ID
Rule 68    surface -> surface_statement
Rule 69    surface_element -> line
Rule 70    surface_element -> dollar
Rule 71    surface_element -> note_statement
Rule 72    surface_element -> link_reference_statement
Rule 73    surface_element -> milestone
Rule 74    dollar -> ruling_statement
Rule 75    dollar -> loose_dollar_statement
Rule 76    dollar -> strict_dollar_statement
Rule 77    dollar -> simple_dollar_statement
Rule 78    surface -> surface surface_element
Rule 79    line_sequence -> LINELABEL ID
Rule 80    line_sequence -> line_sequence ID
Rule 81    line_sequence -> line_sequence reference
Rule 82    line_statement -> line_sequence newline
Rule 83    line -> line_statement
Rule 84    line -> line lemma_statement
Rule 85    line -> line note_statement
Rule 86    line -> line interlinear
Rule 87    interlinear -> TR ID newline
Rule 88    interlinear -> TR newline
Rule 89    line -> line link_reference_statement
Rule 90    line -> line equalbrace_statement
Rule 91    equalbrace -> EQUALBRACE
Rule 92    equalbrace -> equalbrace ID
Rule 93    equalbrace_statement -> equalbrace newline
Rule 94    line -> line multilingual
Rule 95    multilingual_sequence -> MULTILINGUAL ID
Rule 96    multilingual_sequence -> multilingual_sequence ID
Rule 97    multilingual_sequence -> multilingual_sequence reference
Rule 98    multilingual_statement -> multilingual_sequence newline
Rule 99    multilingual -> multilingual_statement
Rule 100   multilingual -> multilingual lemma_statement
Rule 101   multilingual -> multilingual note_statement
Rule 102   multilingual -> multilingual link_reference_statement
Rule 103   lemma_list -> LEM ID
Rule 104   milestone -> milestone_name newline
Rule 105   milestone_name -> M EQUALS ID
Rule 106   milestone_name -> CATCHLINE
Rule 107   milestone_name -> COLOPHON
Rule 108   milestone_name -> DATE
Rule 109   milestone_name -> EDGE
Rule 110   milestone_name -> SIGNATURES
Rule 111   milestone_name -> SIGNATURE
Rule 112   milestone_name -> SUMMARY
Rule 113   milestone_name -> WITNESSES
Rule 114   lemma_list -> lemma_list lemma
Rule 115   lemma -> SEMICOLON
Rule 116   lemma -> lemma ID
Rule 117   lemma_statement -> lemma_list newline
Rule 118   ruling_statement -> ruling newline
Rule 119   ruling -> DOLLAR SINGLE RULING
Rule 120   ruling -> DOLLAR DOUBLE RULING
Rule 121   ruling -> DOLLAR TRIPLE RULING
Rule 122   ruling -> DOLLAR SINGLE LINE RULING
Rule 123   ruling -> DOLLAR DOUBLE LINE RULING
Rule 124   ruling -> DOLLAR TRIPLE LINE RULING
Rule 125   ruling -> DOLLAR RULING
Rule 126   ruling -> ruling flag
Rule 127   note_statement -> note_sequence newline
Rule 128   note_sequence -> NOTE
Rule 129   note_sequence -> note_sequence ID
Rule 130   note_sequence -> note_sequence reference
Rule 131   reference -> HAT ID HAT
Rule 132   newline -> NEWLINE
Rule 133   newline -> newline NEWLINE
Rule 134   loose_dollar_statement -> DOLLAR PARENTHETICALID newline
Rule 135   strict_dollar_statement -> DOLLAR state_description newline
Rule 136   state_description -> plural_state_description
Rule 137   state_description -> singular_state_desc
Rule 138   state_description -> brief_state_desc
Rule 139   simple_dollar_statement -> DOLLAR ID newline
Rule 140   simple_dollar_statement -> DOLLAR state newline
Rule 141   plural_state_description -> plural_quantifier plural_scope state
Rule 142   plural_state_description -> ID plural_scope state
Rule 143   plural_state_description -> ID singular_scope state
Rule 144   plural_state_description -> ID REFERENCE state
Rule 145   plural_state_description -> ID MINUS ID plural_scope state
Rule 146   plural_state_description -> qualification plural_state_description
Rule 147   singular_state_desc -> singular_scope state
Rule 148   singular_state_desc -> REFERENCE state
Rule 149   singular_state_desc -> REFERENCE ID state
Rule 150   brief_state_desc -> brief_quantifier state
Rule 151   singular_state_desc -> partial_quantifier singular_state_desc
Rule 152   state -> BLANK
Rule 153   state -> BROKEN
Rule 154   state -> EFFACED
Rule 155   state -> ILLEGIBLE
Rule 156   state -> MISSING
Rule 157   state -> TRACES
Rule 158   plural_quantifier -> SEVERAL
Rule 159   plural_quantifier -> SOME
Rule 160   singular_scope -> LINE
Rule 161   singular_scope -> CASE
Rule 162   plural_scope -> COLUMNS
Rule 163   plural_scope -> LINES
Rule 164   plural_scope -> CASES
Rule 165   brief_quantifier -> REST
Rule 166   brief_quantifier -> START
Rule 167   brief_quantifier -> BEGINNING
Rule 168   brief_quantifier -> MIDDLE
Rule 169   brief_quantifier -> END
Rule 170   partial_quantifier -> brief_quantifier OF
Rule 171   qualification -> AT LEAST
Rule 172   qualification -> AT MOST
Rule 173   qualification -> ABOUT
Rule 174   translation_statement -> TRANSLATION PARALLEL ID PROJECT newline
Rule 175   translation_statement -> TRANSLATION LABELED ID PROJECT newline
Rule 176   translation -> translation_statement
Rule 177   translation -> translation END REFERENCE newline
Rule 178   translation -> translation surface
Rule 179   translation -> translation translationlabeledline
Rule 180   translation -> translation dollar
Rule 181   translationlabeledline -> translationlabel NEWLINE
Rule 182   translationlabeledline -> translationrangelabel NEWLINE
Rule 183   translationlabeledline -> translationlabel CLOSER
Rule 184   translationlabeledline -> translationrangelabel CLOSER
Rule 185   translationlabel -> LABEL
Rule 186   translationlabel -> OPENR
Rule 187   translationlabel -> translationlabel ID
Rule 188   translationlabel -> translationlabel REFERENCE
Rule 189   translationrangelabel -> translationlabel MINUS
Rule 190   translationrangelabel -> translationrangelabel ID
Rule 191   translationrangelabel -> translationrangelabel REFERENCE
Rule 192   translationlabeledline -> translationlabeledline reference
Rule 193   translationlabeledline -> translationlabeledline reference newline
Rule 194   translationlabeledline -> translationlabeledline note_statement
Rule 195   translationlabeledline -> translationlabeledline ID
Rule 196   translationlabeledline -> translationlabeledline ID newline
Rule 197   link_reference -> link_operator ID
Rule 198   link_reference -> link_reference ID
Rule 199   link_reference -> link_reference COMMA ID
Rule 200   link_range_reference -> link_range_reference ID
Rule 201   link_range_reference -> link_range_reference COMMA ID
Rule 202   link_range_reference -> link_reference MINUS
Rule 203   link_reference_statement -> link_reference newline
Rule 204   link_reference_statement -> link_range_reference newline
Rule 205   link_operator -> PARBAR
Rule 206   link_operator -> TO
Rule 207   link_operator -> FROM
Rule 208   comment -> COMMENT ID NEWLINE
Rule 209   comment -> CHECK ID NEWLINE
Rule 210   surface -> surface comment
Rule 211   translationlabeledline -> translationlabeledline comment
Rule 212   translation -> translation comment
Rule 213   text -> text comment
Rule 214   line -> line comment
Rule 215   multilingual -> multilingual comment
Rule 216   score -> SCORE ID ID NEWLINE
Rule 217   score -> SCORE ID ID ID NEWLINE
Rule 218   text -> text score

Terminals, with rules where they appear

ABOUT                : 173
AMPERSAND            : 4
AT                   : 171 172
ATF                  : 9 10 11 12 13 27
BEGINNING            : 167
BIB                  : 15
BLANK                : 152
BOTTOM               : 62
BROKEN               : 153
BULLA                : 47
CASE                 : 161
CASES                : 164
CATCHLINE            : 106
CHECK                : 209
CLOSER               : 183 184
COLOPHON             : 107
COLUMN               : 65
COLUMNS              : 162
COMMA                : 199 201
COMMENT              : 208
COMPOSITE            : 35
DATE                 : 108
DEF                  : 24
DOLLAR               : 119 120 121 122 123 124 125 134 135 139 140
DOUBLE               : 120 123
EDGE                 : 109
EFFACED              : 154
END                  : 169 177
ENVELOPE             : 45
EQUALBRACE           : 91
EQUALS               : 4 18 20 24 24 25 26 105
EXCLAIM              : 40
FACE                 : 63
FRAGMENT             : 48
FROM                 : 207
HASH                 : 39
HAT                  : 131 131
HEADING              : 67
ID                   : 4 4 5 15 19 20 22 24 24 24 25 25 26 26 27 48 49 63 64 65 66 67 79 80 87 92 95 96 103 105 116 129 131 139 142 143 144 145 145 149 174 175 187 190 195 196 197 198 199 200 201 208 209 216 216 217 217 217
ILLEGIBLE            : 155
INCLUDE              : 26
KEY                  : 19
LABEL                : 185
LABELED              : 175
LANG                 : 27
LEAST                : 171
LEFT                 : 59
LEGACY               : 11
LEM                  : 103
LEMMATIZER           : 21
LEXICAL              : 13
LINE                 : 122 123 124 160
LINELABEL            : 79
LINES                : 163
LINK                 : 24 25
LSQUARE              : 
M                    : 105
MATH                 : 10
MIDDLE               : 168
MINUS                : 145 189 202
MISSING              : 156
MOST                 : 172
MULTILINGUAL         : 95
MYLINES              : 12
NEWLINE              : 132 133 181 182 208 209 216 217
NOTE                 : 128
OBJECT               : 49
OBVERSE              : 57
OF                   : 170
OPENR                : 186
PARALLEL             : 25 174
PARBAR               : 205
PARENTHETICALID      : 134
PRISM                : 46
PROJECT              : 5 174 175
QUERY                : 41
RANGE                : 
REFERENCE            : 50 144 148 149 177 188 191
REST                 : 165
REVERSE              : 58
RIGHT                : 60
RSQUARE              : 
RULING               : 119 120 121 122 123 124 125
SCORE                : 216 217
SCORELABEL           : 
SEAL                 : 66
SEMICOLON            : 115
SEVERAL              : 158
SIGNATURE            : 111
SIGNATURES           : 110
SINGLE               : 119 122
SOME                 : 159
STAR                 : 42
START                : 166
SUMMARY              : 112
SURFACE              : 64
TABLET               : 44 50
TO                   : 206
TOP                  : 61
TR                   : 87 88
TRACES               : 157
TRANSLATION          : 174 175
TRIPLE               : 121 124
UNICODE              : 9
USE                  : 9 10 11 12 13
WITNESSES            : 113
error                : 

Nonterminals, with rules where they appear

brief_quantifier     : 150 170
brief_state_desc     : 138
comment              : 210 211 212 213 214 215
composite            : 3 37
document             : 0
dollar               : 70 180
equalbrace           : 92 93
equalbrace_statement : 90
flag                 : 43 56 126
interlinear          : 86
key                  : 17 18 20
key_statement        : 14
language_protocol    : 30
lemma                : 114 116
lemma_list           : 114 117
lemma_statement      : 84 100
lemmatizer           : 22 23
lemmatizer_statement : 16
line                 : 69 84 85 86 89 90 94 214
line_sequence        : 80 81 82
line_statement       : 83
link                 : 29
link_operator        : 197
link_range_reference : 200 201 204
link_reference       : 198 199 202 203
link_reference_statement : 72 89 102
loose_dollar_statement : 75
milestone            : 73
milestone_name       : 104
multilingual         : 94 100 101 102 215
multilingual_sequence : 96 97 98
multilingual_statement : 99
newline              : 4 5 9 10 11 12 13 15 17 18 23 24 25 26 27 35 38 55 82 87 88 93 98 104 117 118 127 133 134 135 139 140 174 175 177 193 196 203 204
note_sequence        : 127 129 130
note_statement       : 71 85 101 194
object               : 2 31 52 53 54
object_specifier     : 38 43
object_statement     : 51
partial_quantifier   : 151
plural_quantifier    : 141
plural_scope         : 141 142 145
plural_state_description : 136 146
project              : 7
project_statement    : 6
qualification        : 146
reference            : 81 97 130 192 193
ruling               : 118 126
ruling_statement     : 74
score                : 218
simple_dollar_statement : 77
singular_scope       : 143 147
singular_state_desc  : 137 151
skipped_protocol     : 28
state                : 140 141 142 143 144 145 147 148 149 150
state_description    : 135
strict_dollar_statement : 76
surface              : 32 52 78 178 210
surface_element      : 34 54 78
surface_specifier    : 55 56
surface_statement    : 68
text                 : 1 7 28 29 30 31 32 33 34 35 36 36 37 213 218
text_statement       : 8
translation          : 33 53 177 178 179 180 212
translation_statement : 176
translationlabel     : 181 183 187 188 189
translationlabeledline : 179 192 193 194 195 196 211
translationrangelabel : 182 184 190 191

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . text
    (2) document -> . object
    (3) document -> . composite
    (7) text -> . text project
    (8) text -> . text_statement
    (28) text -> . text skipped_protocol
    (29) text -> . text link
    (30) text -> . text language_protocol
    (31) text -> . text object
    (32) text -> . text surface
    (33) text -> . text translation
    (34) text -> . text surface_element
    (35) text -> . text COMPOSITE newline
    (213) text -> . text comment
    (218) text -> . text score
    (51) object -> . object_statement
    (52) object -> . object surface
    (53) object -> . object translation
    (54) object -> . object surface_element
    (36) composite -> . text text
    (37) composite -> . composite text
    (4) text_statement -> . AMPERSAND ID EQUALS ID newline
    (38) object_statement -> . object_specifier newline
    (43) object_specifier -> . object_specifier flag
    (44) object_specifier -> . TABLET
    (45) object_specifier -> . ENVELOPE
    (46) object_specifier -> . PRISM
    (47) object_specifier -> . BULLA
    (48) object_specifier -> . FRAGMENT ID
    (49) object_specifier -> . OBJECT ID
    (50) object_specifier -> . TABLET REFERENCE

    AMPERSAND       shift and go to state 14
    TABLET          shift and go to state 13
    ENVELOPE        shift and go to state 12
    PRISM           shift and go to state 3
    BULLA           shift and go to state 8
    FRAGMENT        shift and go to state 6
    OBJECT          shift and go to state 5

    object_specifier               shift and go to state 1
    object_statement               shift and go to state 4
    composite                      shift and go to state 9
    text                           shift and go to state 2
    object                         shift and go to state 11
    text_statement                 shift and go to state 10
    document                       shift and go to state 7

state 1

    (38) object_statement -> object_specifier . newline
    (43) object_specifier -> object_specifier . flag
    (132) newline -> . NEWLINE
    (133) newline -> . newline NEWLINE
    (39) flag -> . HASH
    (40) flag -> . EXCLAIM
    (41) flag -> . QUERY
    (42) flag -> . STAR

    NEWLINE         shift and go to state 19
    HASH            shift and go to state 18
    EXCLAIM         shift and go to state 16
    QUERY           shift and go to state 21
    STAR            shift and go to state 15

    flag                           shift and go to state 20
    newline                        shift and go to state 17

state 2

    (1) document -> text .
    (7) text -> text . project
    (28) text -> text . skipped_protocol
    (29) text -> text . link
    (30) text -> text . language_protocol
    (31) text -> text . object
    (32) text -> text . surface
    (33) text -> text . translation
    (34) text -> text . surface_element
    (35) text -> text . COMPOSITE newline
    (213) text -> text . comment
    (218) text -> text . score
    (36) composite -> text . text
    (6) project -> . project_statement
    (9) skipped_protocol -> . ATF USE UNICODE newline
    (10) skipped_protocol -> . ATF USE MATH newline
    (11) skipped_protocol -> . ATF USE LEGACY newline
    (12) skipped_protocol -> . ATF USE MYLINES newline
    (13) skipped_protocol -> . ATF USE LEXICAL newline
    (14) skipped_protocol -> . key_statement
    (15) skipped_protocol -> . BIB ID newline
    (16) skipped_protocol -> . lemmatizer_statement
    (24) link -> . LINK DEF ID EQUALS ID EQUALS ID newline
    (25) link -> . LINK PARALLEL ID EQUALS ID newline
    (26) link -> . INCLUDE ID EQUALS ID newline
    (27) language_protocol -> . ATF LANG ID newline
    (51) object -> . object_statement
    (52) object -> . object surface
    (53) object -> . object translation
    (54) object -> . object surface_element
    (68) surface -> . surface_statement
    (78) surface -> . surface surface_element
    (210) surface -> . surface comment
    (176) translation -> . translation_statement
    (177) translation -> . translation END REFERENCE newline
    (178) translation -> . translation surface
    (179) translation -> . translation translationlabeledline
    (180) translation -> . translation dollar
    (212) translation -> . translation comment
    (69) surface_element -> . line
    (70) surface_element -> . dollar
    (71) surface_element -> . note_statement
    (72) surface_element -> . link_reference_statement
    (73) surface_element -> . milestone
    (208) comment -> . COMMENT ID NEWLINE
    (209) comment -> . CHECK ID NEWLINE
    (216) score -> . SCORE ID ID NEWLINE
    (217) score -> . SCORE ID ID ID NEWLINE
    (7) text -> . text project
    (8) text -> . text_statement
    (28) text -> . text skipped_protocol
    (29) text -> . text link
    (30) text -> . text language_protocol
    (31) text -> . text object
    (32) text -> . text surface
    (33) text -> . text translation
    (34) text -> . text surface_element
    (35) text -> . text COMPOSITE newline
    (213) text -> . text comment
    (218) text -> . text score
    (5) project_statement -> . PROJECT ID newline
    (17) key_statement -> . key newline
    (18) key_statement -> . key EQUALS newline
    (23) lemmatizer_statement -> . lemmatizer newline
    (38) object_statement -> . object_specifier newline
    (55) surface_statement -> . surface_specifier newline
    (174) translation_statement -> . TRANSLATION PARALLEL ID PROJECT newline
    (175) translation_statement -> . TRANSLATION LABELED ID PROJECT newline
    (83) line -> . line_statement
    (84) line -> . line lemma_statement
    (85) line -> . line note_statement
    (86) line -> . line interlinear
    (89) line -> . line link_reference_statement
    (90) line -> . line equalbrace_statement
    (94) line -> . line multilingual
    (214) line -> . line comment
    (74) dollar -> . ruling_statement
    (75) dollar -> . loose_dollar_statement
    (76) dollar -> . strict_dollar_statement
    (77) dollar -> . simple_dollar_statement
    (127) note_statement -> . note_sequence newline
    (203) link_reference_statement -> . link_reference newline
    (204) link_reference_statement -> . link_range_reference newline
    (104) milestone -> . milestone_name newline
    (4) text_statement -> . AMPERSAND ID EQUALS ID newline
    (19) key -> . KEY ID
    (20) key -> . key EQUALS ID
    (21) lemmatizer -> . LEMMATIZER
    (22) lemmatizer -> . lemmatizer ID
    (43) object_specifier -> . object_specifier flag
    (44) object_specifier -> . TABLET
    (45) object_specifier -> . ENVELOPE
    (46) object_specifier -> . PRISM
    (47) object_specifier -> . BULLA
    (48) object_specifier -> . FRAGMENT ID
    (49) object_specifier -> . OBJECT ID
    (50) object_specifier -> . TABLET REFERENCE
    (56) surface_specifier -> . surface_specifier flag
    (57) surface_specifier -> . OBVERSE
    (58) surface_specifier -> . REVERSE
    (59) surface_specifier -> . LEFT
    (60) surface_specifier -> . RIGHT
    (61) surface_specifier -> . TOP
    (62) surface_specifier -> . BOTTOM
    (63) surface_specifier -> . FACE ID
    (64) surface_specifier -> . SURFACE ID
    (65) surface_specifier -> . COLUMN ID
    (66) surface_specifier -> . SEAL ID
    (67) surface_specifier -> . HEADING ID
    (82) line_statement -> . line_sequence newline
    (118) ruling_statement -> . ruling newline
    (134) loose_dollar_statement -> . DOLLAR PARENTHETICALID newline
    (135) strict_dollar_statement -> . DOLLAR state_description newline
    (139) simple_dollar_statement -> . DOLLAR ID newline
    (140) simple_dollar_statement -> . DOLLAR state newline
    (128) note_sequence -> . NOTE
    (129) note_sequence -> . note_sequence ID
    (130) note_sequence -> . note_sequence reference
    (197) link_reference -> . link_operator ID
    (198) link_reference -> . link_reference ID
    (199) link_reference -> . link_reference COMMA ID
    (200) link_range_reference -> . link_range_reference ID
    (201) link_range_reference -> . link_range_reference COMMA ID
    (202) link_range_reference -> . link_reference MINUS
    (105) milestone_name -> . M EQUALS ID
    (106) milestone_name -> . CATCHLINE
    (107) milestone_name -> . COLOPHON
    (108) milestone_name -> . DATE
    (109) milestone_name -> . EDGE
    (110) milestone_name -> . SIGNATURES
    (111) milestone_name -> . SIGNATURE
    (112) milestone_name -> . SUMMARY
    (113) milestone_name -> . WITNESSES
    (79) line_sequence -> . LINELABEL ID
    (80) line_sequence -> . line_sequence ID
    (81) line_sequence -> . line_sequence reference
    (119) ruling -> . DOLLAR SINGLE RULING
    (120) ruling -> . DOLLAR DOUBLE RULING
    (121) ruling -> . DOLLAR TRIPLE RULING
    (122) ruling -> . DOLLAR SINGLE LINE RULING
    (123) ruling -> . DOLLAR DOUBLE LINE RULING
    (124) ruling -> . DOLLAR TRIPLE LINE RULING
    (125) ruling -> . DOLLAR RULING
    (126) ruling -> . ruling flag
    (205) link_operator -> . PARBAR
    (206) link_operator -> . TO
    (207) link_operator -> . FROM

    $end            reduce using rule 1 (document -> text .)
    COMPOSITE       shift and go to state 52
    ATF             shift and go to state 22
    BIB             shift and go to state 84
    LINK            shift and go to state 26
    INCLUDE         shift and go to state 50
    COMMENT         shift and go to state 28
    CHECK           shift and go to state 32
    SCORE           shift and go to state 88
    PROJECT         shift and go to state 87
    TRANSLATION     shift and go to state 31
    AMPERSAND       shift and go to state 14
    KEY             shift and go to state 76
    LEMMATIZER      shift and go to state 66
    TABLET          shift and go to state 13
    ENVELOPE        shift and go to state 12
    PRISM           shift and go to state 3
    BULLA           shift and go to state 8
    FRAGMENT        shift and go to state 6
    OBJECT          shift and go to state 5
    OBVERSE         shift and go to state 47
    REVERSE         shift and go to state 38
    LEFT            shift and go to state 77
    RIGHT           shift and go to state 89
    TOP             shift and go to state 80
    BOTTOM          shift and go to state 29
    FACE            shift and go to state 92
    SURFACE         shift and go to state 53
    COLUMN          shift and go to state 60
    SEAL            shift and go to state 42
    HEADING         shift and go to state 43
    DOLLAR          shift and go to state 86
    NOTE            shift and go to state 93
    M               shift and go to state 40
    CATCHLINE       shift and go to state 95
    COLOPHON        shift and go to state 46
    DATE            shift and go to state 83
    EDGE            shift and go to state 94
    SIGNATURES      shift and go to state 56
    SIGNATURE       shift and go to state 81
    SUMMARY         shift and go to state 67
    WITNESSES       shift and go to state 68
    LINELABEL       shift and go to state 61
    PARBAR          shift and go to state 48
    TO              shift and go to state 85
    FROM            shift and go to state 90

    comment                        shift and go to state 54
    object_specifier               shift and go to state 1
    surface_statement              shift and go to state 23
    surface_element                shift and go to state 79
    link_reference_statement       shift and go to state 62
    text                           shift and go to state 24
    skipped_protocol               shift and go to state 39
    dollar                         shift and go to state 25
    lemmatizer                     shift and go to state 55
    surface                        shift and go to state 82
    note_sequence                  shift and go to state 58
    key_statement                  shift and go to state 59
    object_statement               shift and go to state 4
    line                           shift and go to state 71
    project_statement              shift and go to state 30
    line_sequence                  shift and go to state 63
    score                          shift and go to state 44
    line_statement                 shift and go to state 57
    loose_dollar_statement         shift and go to state 64
    note_statement                 shift and go to state 78
    lemmatizer_statement           shift and go to state 33
    text_statement                 shift and go to state 10
    object                         shift and go to state 45
    surface_specifier              shift and go to state 41
    link_range_reference           shift and go to state 65
    link                           shift and go to state 69
    key                            shift and go to state 49
    milestone                      shift and go to state 34
    link_reference                 shift and go to state 35
    ruling_statement               shift and go to state 70
    translation                    shift and go to state 27
    translation_statement          shift and go to state 51
    language_protocol              shift and go to state 91
    strict_dollar_statement        shift and go to state 72
    milestone_name                 shift and go to state 73
    project                        shift and go to state 74
    ruling                         shift and go to state 75
    link_operator                  shift and go to state 36
    simple_dollar_statement        shift and go to state 37

state 3

    (46) object_specifier -> PRISM .

    NEWLINE         reduce using rule 46 (object_specifier -> PRISM .)
    HASH            reduce using rule 46 (object_specifier -> PRISM .)
    EXCLAIM         reduce using rule 46 (object_specifier -> PRISM .)
    QUERY           reduce using rule 46 (object_specifier -> PRISM .)
    STAR            reduce using rule 46 (object_specifier -> PRISM .)


state 4

    (51) object -> object_statement .

    TRANSLATION     reduce using rule 51 (object -> object_statement .)
    OBVERSE         reduce using rule 51 (object -> object_statement .)
    REVERSE         reduce using rule 51 (object -> object_statement .)
    LEFT            reduce using rule 51 (object -> object_statement .)
    RIGHT           reduce using rule 51 (object -> object_statement .)
    TOP             reduce using rule 51 (object -> object_statement .)
    BOTTOM          reduce using rule 51 (object -> object_statement .)
    FACE            reduce using rule 51 (object -> object_statement .)
    SURFACE         reduce using rule 51 (object -> object_statement .)
    COLUMN          reduce using rule 51 (object -> object_statement .)
    SEAL            reduce using rule 51 (object -> object_statement .)
    HEADING         reduce using rule 51 (object -> object_statement .)
    DOLLAR          reduce using rule 51 (object -> object_statement .)
    NOTE            reduce using rule 51 (object -> object_statement .)
    M               reduce using rule 51 (object -> object_statement .)
    CATCHLINE       reduce using rule 51 (object -> object_statement .)
    COLOPHON        reduce using rule 51 (object -> object_statement .)
    DATE            reduce using rule 51 (object -> object_statement .)
    EDGE            reduce using rule 51 (object -> object_statement .)
    SIGNATURES      reduce using rule 51 (object -> object_statement .)
    SIGNATURE       reduce using rule 51 (object -> object_statement .)
    SUMMARY         reduce using rule 51 (object -> object_statement .)
    WITNESSES       reduce using rule 51 (object -> object_statement .)
    LINELABEL       reduce using rule 51 (object -> object_statement .)
    PARBAR          reduce using rule 51 (object -> object_statement .)
    TO              reduce using rule 51 (object -> object_statement .)
    FROM            reduce using rule 51 (object -> object_statement .)
    COMPOSITE       reduce using rule 51 (object -> object_statement .)
    ATF             reduce using rule 51 (object -> object_statement .)
    BIB             reduce using rule 51 (object -> object_statement .)
    LINK            reduce using rule 51 (object -> object_statement .)
    INCLUDE         reduce using rule 51 (object -> object_statement .)
    COMMENT         reduce using rule 51 (object -> object_statement .)
    CHECK           reduce using rule 51 (object -> object_statement .)
    SCORE           reduce using rule 51 (object -> object_statement .)
    PROJECT         reduce using rule 51 (object -> object_statement .)
    KEY             reduce using rule 51 (object -> object_statement .)
    LEMMATIZER      reduce using rule 51 (object -> object_statement .)
    TABLET          reduce using rule 51 (object -> object_statement .)
    ENVELOPE        reduce using rule 51 (object -> object_statement .)
    PRISM           reduce using rule 51 (object -> object_statement .)
    BULLA           reduce using rule 51 (object -> object_statement .)
    FRAGMENT        reduce using rule 51 (object -> object_statement .)
    OBJECT          reduce using rule 51 (object -> object_statement .)
    AMPERSAND       reduce using rule 51 (object -> object_statement .)
    $end            reduce using rule 51 (object -> object_statement .)


state 5

    (49) object_specifier -> OBJECT . ID

    ID              shift and go to state 96


state 6

    (48) object_specifier -> FRAGMENT . ID

    ID              shift and go to state 97


state 7

    (0) S' -> document .



state 8

    (47) object_specifier -> BULLA .

    NEWLINE         reduce using rule 47 (object_specifier -> BULLA .)
    HASH            reduce using rule 47 (object_specifier -> BULLA .)
    EXCLAIM         reduce using rule 47 (object_specifier -> BULLA .)
    QUERY           reduce using rule 47 (object_specifier -> BULLA .)
    STAR            reduce using rule 47 (object_specifier -> BULLA .)


state 9

    (3) document -> composite .
    (37) composite -> composite . text
    (7) text -> . text project
    (8) text -> . text_statement
    (28) text -> . text skipped_protocol
    (29) text -> . text link
    (30) text -> . text language_protocol
    (31) text -> . text object
    (32) text -> . text surface
    (33) text -> . text translation
    (34) text -> . text surface_element
    (35) text -> . text COMPOSITE newline
    (213) text -> . text comment
    (218) text -> . text score
    (4) text_statement -> . AMPERSAND ID EQUALS ID newline

    $end            reduce using rule 3 (document -> composite .)
    AMPERSAND       shift and go to state 14

    text                           shift and go to state 98
    text_statement                 shift and go to state 10

state 10

    (8) text -> text_statement .
